Turn into a npm project with sass and pug

--- a/style.scss
+++ b/style.scss
@@ -28,7 +28,7 @@ nav {
 
     li {
         margin-left: 1em;
-        // display: inline-block;
+        display: inline-block;
 
         // :hover {
         //     color: white;
