--- a/templates/index.pug
+++ b/templates/index.pug
@@ -6,14 +6,19 @@ html
     div.container
       div.columns
         div.column
+          h3
+            a(href='/projects/shotty.html') Shotty
+          hr
+          p.paragraph A snapshot tool for AWS EC2 instances built with Python. This tool is a CLI.
+        //- div.column
           h3 Online Forum
           hr
           p.paragraph An online forum built with Ruby on Rails and hosted on AWS EC2. This site also uses Bulma, FontAwesome and PostreSQL.
-        div.column
+        //- div.column
           h3 Chat App
           hr
           p.paragraph A chat application built with React hosted on AWS EC2. This site also uses RabbitMQ and Pusher.
-      div.columns
+      //- div.columns
         div.column
           h3 URL Shortener
           hr
@@ -22,7 +27,7 @@ html
           h3 Shotty
           hr
           p.paragraph A snapshot tool for AWS EC2 instances built with Python. This tool is a CLI.
-      div.columns
+      //- div.columns
         div.column
           h3 JobSearch
           hr
