Add a static file server with express and add description section to shotty page

--- a/templates/shotty.pug
+++ b/templates/shotty.pug
@@ -4,6 +4,8 @@ html
     h1.title Shotty
     include partials/nav.pug
     div.container
+      h2.section Description
+      p Shotty is a CLI tool for AWS EC2 instance volume snapshots.
       h2.section Requirements
       ul
         li Python 3
