Add more partials, extract a layout, add a page for webit, add an error page, and add directory creation and file copying to build script

--- a/templates/partials/nav.pug
+++ b/templates/partials/nav.pug
@@ -1,11 +1,14 @@
 nav
   ul
     li
+      i(class='fas fa-home') &nbsp;
+      a(href='/') Home
+    li
       i(class='fas fa-user') &nbsp;
-        a(href='/') About Me
+      a(href='/about.html') About Me
     li
       i(class='fas fa-envelope') &nbsp;
-        a(href='/') tacoda@pm.me
+      a(href='mailto:tacoda@pm.me') tacoda@pm.me
     li
       i(class='fas fa-file-alt') &nbsp;
-        a(href='/') CV
+      a(href='/') CV
