--- a/style.scss
+++ b/style.scss
@@ -39,6 +39,9 @@ nav {
 
 footer {
     background-color: $back-gray;
+    padding: 1em;
+    font-weight: bold;
+    text-align: center;
 }
 
 .title {
