Update webit url

--- a/templates/webit.pug
+++ b/templates/webit.pug
@@ -15,7 +15,7 @@ block content
     p Install with pip
     div.cli
       i.fas.fa-dollar-sign.prompt
-      span.command pip3 install https://s3.amazonaws.com/tacoda-dist/webit...
+      span.command pip3 install https://s3.amazonaws.com/tacoda-dist/webit/WebIt-0.1-py3-none-any.whl
     h2.section Usage
     p List S3 buckets
     div.cli
