--- a/templates/shotty.pug
+++ b/templates/shotty.pug
@@ -6,18 +6,18 @@ block title
 block content
   div.container
     h2.section Description
-    p Shotty is a CLI tool for AWS EC2 instance volume snapshots.
+    p.paragraph Shotty is a CLI tool for AWS EC2 instance volume snapshots.
     h2.section Requirements
-    ul
+    ul.requirements
       li Python 3
       li AWS CLI
     h2.section Installation
-    p Install with pip
+    p.paragraph Install with pip
     div.cli
       i.fas.fa-dollar-sign.prompt
       span.command pip3 install https://s3.amazonaws.com/tacoda-dist/shotty/shotty-0.1-py3-none-any.whl
     h2.section Usage
-    p List EC2 instances
+    p.paragraph List EC2 instances
     div.cli
       i.fas.fa-dollar-sign.prompt
       span.command shotty instances list
