--- a/templates/webit.pug
+++ b/templates/webit.pug
@@ -6,18 +6,18 @@ block title
 block content
   div.container
     h2.section Description
-    p WebIt is a CLI tool that will sync a local directory to an S3 bucket. It will also optionally configure Route 53 and CloudFront.
+    p.paragraph WebIt is a CLI tool that will sync a local directory to an S3 bucket. It will also optionally configure Route 53 and CloudFront.
     h2.section Requirements
-    ul
+    ul.requirements
       li Python 3
       li AWS CLI
     h2.section Installation
-    p Install with pip
+    p.paragraph Install with pip
     div.cli
       i.fas.fa-dollar-sign.prompt
       span.command pip3 install https://s3.amazonaws.com/tacoda-dist/webit/WebIt-0.1-py3-none-any.whl
     h2.section Usage
-    p List S3 buckets
+    p.paragraph List S3 buckets
     div.cli
       i.fas.fa-dollar-sign.prompt
       span.command webit list-buckets
