--- a/templates/index.pug
+++ b/templates/index.pug
@@ -6,16 +6,16 @@ block title
 block content
   div.container
     div.columns
-      div.column
-        h2
-          a(href='/shotty.html') Shotty
-        hr
-        p.paragraph A CLI snapshot tool for AWS EC2 instances built with Python.
-      div.column
-        h2
-          a(href='/webit.html') WebIt
-        hr
-        p.paragraph A CLI tool that will deploy a directory to a webpage.
+      a(class='project' href='/shotty.html')
+        div.column
+          h2 Shotty
+          hr
+          p.paragraph A CLI snapshot tool for AWS EC2 instances built with Python.
+      a(class='project' href='/webit.html')
+        div.column
+          h2 WebIt
+          hr
+          p.paragraph A CLI tool that will deploy a directory to a webpage.
       //- div.column
         h2 Online Forum
         hr
