Add more projects and add emoji

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -9,36 +9,33 @@ block content
       div.column
         a(href='/shotty.html')
           div.project
-            h2 Shotty
+            h2 📸 Shotty
             p.paragraph A CLI snapshot tool for AWS EC2 instances built with Python.
       div.column
         a(href='/webit.html')
           div.project
-            h2 WebIt
+            h2 🐸 WebIt
             p.paragraph A CLI tool that will deploy a directory to a webpage.
-      //- div.column
-        h2 Online Forum
-        hr
-        p.paragraph An online forum built with Ruby on Rails and hosted on AWS EC2. This site also uses Bulma, FontAwesome and PostreSQL.
-      //- div.column
-        h2 Chat App
-        hr
-        p.paragraph A chat application built with React hosted on AWS EC2. This site also uses RabbitMQ and Pusher.
-    //- div.columns
+    div.columns
       div.column
-        h2 URL Shortener
-        hr
-        p.paragraph A url shortener built with React that uses AWS Lambda and DynamoDB.
+        a(href='/')
+          div.project
+            h2 🦈 Jaws
+            p.paragraph A CLI tool that manages AWS resources built with Rust.
       div.column
-        h2 Shotty
-        hr
-        p.paragraph A snapshot tool for AWS EC2 instances built with Python. This tool is a CLI.
-    //- div.columns
+        a(href='/')
+          div.project
+            h2 🔗 hngql
+            p.paragraph A GraphQL server for a hacker news application built with Django.
+    div.columns
       div.column
-        h2 JobSearch
-        hr
-        p.paragraph A job search site built Django and hosted on AWS EC2. This site uses the indeed job search API.
+        a(href='/')
+          div.project
+            h2 🦁 Roarum
+            p.paragraph An online forum built with Ruby on Rails.
       div.column
-        h2 E-Commerce
-        hr
-        p.paragraph An online ordering site built with PHP. This site also uses MySQL, AWS and Google Cloud Platform.
+        a(href='/')
+          div.project
+            h2 💼 HireMe
+            p.paragraph A job search website built with Django.
+      
