Update project list

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -14,7 +14,7 @@ block content
       div.column
         a(href='/webit.html')
           div.project
-            h2 🐸 WebIt
+            h2 🕸️ WebIt
             p.paragraph A CLI tool that will deploy a directory to a webpage.
     div.columns
       div.column
@@ -25,17 +25,16 @@ block content
       div.column
         a(href='/')
           div.project
-            h2 🔗 hngql
-            p.paragraph A GraphQL server for a hacker news application built with Django.
-    div.columns
-      div.column
-        a(href='/')
-          div.project
             h2 🦁 Roarum
             p.paragraph An online forum built with Ruby on Rails.
+    div.columns
       div.column
         a(href='/')
           div.project
             h2 💼 HireMe
             p.paragraph A job search website built with Django.
-      
+      div.column
+        a(href='/')
+          div.project
+            h2 💬 powwow
+            p.paragraph A chat application built with React.
