Update portfolio projects and add cv

--- a/templates/index.pug
+++ b/templates/index.pug
@@ -10,31 +10,36 @@ block content
         a(href='/shotty.html')
           div.project
             h2 📸 Shotty
-            p.paragraph A CLI snapshot tool for AWS EC2 instances built with Python.
+            p.paragraph Shotty is a command line tool for AWS EC2 volume snapshots.
+            p.paragraph Shotty is built with Python3 using the Click package.
       div.column
         a(href='/webit.html')
           div.project
             h2 🕸️ WebIt
-            p.paragraph A CLI tool that will deploy a directory to a webpage.
+            p.paragraph WebIt is a command line tool that will deploy a directory to a webpage.
+            p.paragraph WebIt is built with Python3 using the Click package.
     div.columns
       div.column
-        a(href='/')
+        a(href='https://gitlab.com/tacoda/jaws')
           div.project
             h2 🦈 Jaws
-            p.paragraph A CLI tool that manages AWS resources built with Rust.
+            p.paragraph Jaws is a command line tool that manages AWS resources.
+            p.paragraph Jaws is built with Rust using the StructOpt crate.
+            p.paragraph Jaws is still under active development and aspires to be able to completely replace the AWS CLI.
       div.column
         a(href='/')
           div.project
             h2 🦁 Roarum
-            p.paragraph An online forum built with Ruby on Rails.
-    div.columns
-      div.column
-        a(href='/')
-          div.project
-            h2 💼 HireMe
-            p.paragraph A job search website built with Django.
-      div.column
-        a(href='/')
-          div.project
-            h2 💬 powwow
-            p.paragraph A chat application built with React.
+            p.paragraph Roarum is an online community forum.
+            p.paragraph Roarum is built with Ruby on Rails.
+    //- div.columns
+    //-   div.column
+    //-     a(href='/')
+    //-       div.project
+    //-         h2 💼 HireMe
+    //-         p.paragraph A job search website built with Django.
+    //-   div.column
+    //-     a(href='/')
+    //-       div.project
+    //-         h2 💬 powwow
+    //-         p.paragraph A chat application built with React.
