--- a/templates/partials/nav.pug
+++ b/templates/partials/nav.pug
@@ -11,4 +11,4 @@ nav
       a(href='mailto:tacoda@pm.me') tacoda@pm.me
     li
       i(class='fas fa-file-alt') &nbsp;
-      a(href='/') CV
+      a(href='/cv.pdf') CV
