--- a/templates/error.pug
+++ b/templates/error.pug
@@ -1,8 +1,13 @@
 extends layout.pug
 
-block title
-  h1.title Error
-
 block content
   div.container
-    p Page Not Found
+    h2.error Error
+    p.paragraph Page Not Found
+    div.filler
+    p
+        a(href='/')
+            i.fas.fa-arrow-left &nbsp; Back Home
+  div.filler
+  div.filler
+  div.filler
