--- a/templates/layout.pug
+++ b/templates/layout.pug
@@ -1,7 +1,7 @@
 html
   include partials/head.pug
   body
-    block title
+    include partials/header.pug
     include partials/nav.pug
     block content
     include partials/footer.pug
